<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/button_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
           android:layout_gravity="right"
            android:contentDescription="@string/app_name"/>



    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Formulario_actualizar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"/>


            <LinearLayout android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="50dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha_hora"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Latitud"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Longitud"

                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


                </LinearLayout>

                <LinearLayout
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_fecha_update"
                        android:layout_marginTop="50dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha_hora" />

                    <TextView
                        android:id="@+id/textView_latitud_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Latitud" />

                    <TextView
                        android:id="@+id/textView_longitud_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Longitud"

                        />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextNombre_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginVertical="10dp"
                    android:inputType="textPersonName"
                    android:hint="@string/Nombre" />


                <EditText
                    android:layout_marginVertical="10dp"
                    android:id="@+id/editTextDescripcion_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/Descripcion"
                    android:inputType="textMultiLine" />


                <Button
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/button_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Actualizar" />



            </LinearLayout>







        </LinearLayout>



    </RelativeLayout>



</LinearLayout>